--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
+    "react-bingmaps": "^3.6.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
