attempt to gt maps working

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "parcel-bundler": "^1.9.4",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
+    "react-bingmaps": "^3.6.1",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
